# people_detect_pi

./: AcfHSMy18Detector.mat  CMakeLists.txt  README.md  human.sh  main.cpp
acf/: ACFDetector.cpp  ACFDetector.h  ACFFeaturePyramid.cpp  ACFFeaturePyramid.h  Channel.cpp  Channel.h  ChannelFeatures.cpp  ChannelFeatures.h  ColorChannel.cpp  ColorChannel.h  GradHistChannel.h  GradMagChannel.h
control/: HumanInfrared.cpp  HumanInfrared.h  InfraredRemote.cpp  InfraredRemote.h  LinpRemote.cpp  LinpRemote.h  Relay.cpp  Relay.h
general/: DetectionList.cpp  DetectionList.h  NonMaximumSuppression.cpp  NonMaximumSuppression.h  detection.cpp  detection.h
low-level/: Functions.h  convConst.cpp  gradientMex.cpp  rgbConvertMex.cpp  sse.hpp
